--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,17 +18,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            app:menu="@menu/menu_bottom"
-            app:labelVisibilityMode="selected"
             android:fitsSystemWindows="true"
-            android:background="@drawable/bottomnavigation_background" >
+            app:itemIconTint="#CFCFCF"
+            app:itemRippleColor="#4DFF5500"
+            app:labelVisibilityMode="selected"
+            android:background="@drawable/bottomnavigation_background"
+            app:menu="@menu/menu_bottom">
+
         </com.google.android.material.bottomnavigation.BottomNavigationView>
     </FrameLayout>
 
 
-
-
-
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
