--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
 <!--         <item name="colorPrimary">@color/my_light_primary</item>-->
 <!--        <item name="android:windowBackground">@drawable/gradient_drawable</item>-->
 <!--        <item name="android:windowBackground">@drawable/color</item>-->
-        <item name="android:navigationBarColor">@color/white</item>
+<!--        <item name="android:navigationBarColor">@color/white</item>-->
     </style>
 
     <style name="Theme.BuyPhonesOnline" parent="Base.Theme.BuyPhonesOnline" />
