--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -148,7 +148,7 @@
     <RelativeLayout
         android:id="@+id/reL1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="300dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/background_description_product"
         android:layout_below="@id/ln1">
@@ -193,7 +193,7 @@
             android:layout_below="@id/tvPrice"
             android:layout_marginStart="16dp"
             android:gravity="center"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:background="@drawable/background_amount_product">
 
 
@@ -230,7 +230,7 @@
             android:layout_height="48dp"
             android:layout_below="@id/tvPrice"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/group45"/>
     </RelativeLayout>
