--- a/app/src/main/res/layout/layout_item_product.xml
+++ b/app/src/main/res/layout/layout_item_product.xml
@@ -16,7 +16,7 @@
     <TextView
         android:id="@+id/tvProductName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="14dp"
         android:layout_below="@id/imgProduct"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"
