--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -95,6 +95,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp"/>
 
+            <TextView
+                android:id="@+id/tvTelephone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#343A40"
+                android:textStyle="italic"
+                android:layout_below="@id/view2"
+                android:text="@string/telephone" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvTelephone"
+                android:layout_below="@id/tvTelephone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+            <View
+                android:id="@+id/view3"
+                android:layout_below="@id/rvTelephone"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"/>
+
         </RelativeLayout>
     </ScrollView>
 
