--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -158,7 +158,7 @@
         <TextView
             android:id="@+id/tvName"
             android:layout_width="350dp"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="Sony"
@@ -188,52 +188,19 @@
             android:textColor="#FF5500"
             android:textSize="20sp" />
 
-        <LinearLayout
-            android:id="@+id/ln2"
-            android:layout_width="94dp"
-            android:layout_height="34dp"
-            android:layout_below="@id/tvPrice"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/background_amount_product"
-            android:gravity="center">
-
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="-"
-                android:textColor="#909090"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="1"
-                android:textColor="#909090"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+"
-                android:textColor="#909090"
-                android:textSize="20sp" />
-        </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnAddToCart"
-            android:layout_width="211dp"
+            android:layout_width="311dp"
             android:layout_height="48dp"
             android:layout_below="@id/tvPrice"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_centerHorizontal="true"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/group45" />
+            android:text="Thêm vào giỏ"
+            android:textSize="20sp"
+            android:textColor="#FFFFFF"
+            android:textAllCaps="false"
+            android:background="@drawable/rectangle5" />
     </RelativeLayout>
 </RelativeLayout>
