--- a/app/src/main/res/drawable/bg_item_product.xml
+++ b/app/src/main/res/drawable/bg_item_product.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <corners android:radius="10dp"/>
     <solid android:color="@color/white"/>
-    <corners android:radius="90dp"/>
+    <stroke android:color="#FE8C00" android:width="2dp"/>
 </shape>
