--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -2,10 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/color"
-    tools:context=".CartActivity">
+    android:background="@color/white"
+    tools:context=".activity.CartActivity">
 
 
     <FrameLayout
@@ -15,15 +16,26 @@
         android:layout_marginStart="16dp"
         android:layout_alignParentStart="true"
         android:background="@drawable/background_icon"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="8dp">
+
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/imageView"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="center"
             android:src="@drawable/eva_arrow_ios_back_fill" />
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="My Cart"
+        android:fontFamily="@font/inter_medium"
+        android:textSize="20sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProduct"
@@ -102,7 +114,7 @@
             android:text="0" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button"
+            android:id="@+id/btnPurchase"
             android:layout_width="321dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/textView7"
