--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/color"
-    tools:context=".HomeActivity">
+    android:background="@color/background_1"
+    tools:context=".activity.HomeActivity">
 
 
     <FrameLayout
