--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/color"
-    tools:context=".ProductDetailsActivity">
+    android:background="@color/white"
+    tools:context=".activity.ProductDetailsActivity">
 
     <FrameLayout
         android:id="@+id/arrow"
@@ -59,20 +59,14 @@
             android:src="@drawable/carbon_share" />
     </FrameLayout>
 
-    <FrameLayout
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/frame_layout"
         android:layout_width="323dp"
         android:layout_height="323dp"
+        app:cardCornerRadius="20dp"
         android:layout_below="@id/heart"
         android:layout_centerHorizontal="true">
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="245dp"
-            android:layout_height="245dp"
-            android:src="@drawable/rectangle12"
-            android:scaleType="fitCenter"
-            android:layout_gravity="center"/>
 
         <ImageView
             android:id="@+id/image_main"
@@ -81,7 +75,8 @@
             android:src="@drawable/sonyheadphones"
             android:scaleType="fitCenter"
             android:layout_gravity="center"/>
-    </FrameLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:id="@+id/ln1"
@@ -194,7 +189,7 @@
             android:layout_width="311dp"
             android:layout_height="48dp"
             android:layout_centerHorizontal="true"
-            android:text="Thêm vào giỏ"
+            android:text="Add to Cart"
             android:textSize="20sp"
             android:textColor="#FFFFFF"
             android:textAllCaps="false"
