--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,17 +3,190 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileFragment" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ProfileFragment">
 
-    <Button
-        android:id="@+id/btnShow"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Show" />
+        android:layout_centerHorizontal="true"
+        android:textSize="24sp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/inter_semibold"
+        android:text="Profile Setting" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv1"
-        android:layout_below="@id/btnShow"
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
+        android:layout_below="@id/textView"
+        android:layout_centerHorizontal="true">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/avt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:cardCornerRadius="100dp">
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/avt" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/edtAvatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="100dp"
+            android:layout_gravity="bottom|end">
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/photo" />
+        </androidx.cardview.widget.CardView>
+
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/frame_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
+        android:fontFamily="@font/inter_semibold"
+        android:text="TextView" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnSignOut"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="80dp"
+        android:textSize="20sp"
+        android:fontFamily="@font/inter_semibold"
+        android:textAllCaps="false"
+        android:textColor="#F14141"
+        android:background="@drawable/background_signout"
+        android:text="Đăng xuất" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvName"
+        android:layout_marginHorizontal="24dp"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#878787"
+            android:fontFamily="@font/inter_medium"
+            android:text="Thông tin" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp">
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/user" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:textSize="18sp"
+                android:gravity="center"
+                android:layout_marginStart="16dp"
+                android:layout_toEndOf="@id/imageView8"
+                android:fontFamily="@font/inter_medium"
+                android:text="Thông tin cá nhân" />
+
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/rightarrow" />
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="24sp"
+                android:layout_height="24sp"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/imageView8"
+                android:src="@drawable/clipboard" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imageView8"
+                android:layout_marginStart="16dp"
+                android:layout_toEndOf="@id/imageView10"
+                android:layout_marginTop="20dp"
+                android:textSize="18sp"
+                android:gravity="center"
+                android:fontFamily="@font/inter_medium"
+                android:text="Xem thông tin đơn hàng" />
+
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_below="@id/imageView8"
+                android:layout_marginTop="20dp"
+                android:layout_alignParentEnd="true"
+
+                android:src="@drawable/rightarrow" />
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="24sp"
+                android:layout_height="24sp"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/imageView10"
+                android:src="@drawable/settings" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imageView10"
+                android:layout_marginStart="16dp"
+                android:layout_toEndOf="@id/imageView12"
+                android:layout_marginTop="20dp"
+                android:textSize="18sp"
+                android:gravity="center"
+                android:fontFamily="@font/inter_medium"
+                android:text="Setting" />
+
+            <ImageView
+                android:id="@+id/imageView13"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_below="@id/imageView11"
+                android:layout_marginTop="20dp"
+                android:layout_alignParentEnd="true"
+
+                android:src="@drawable/rightarrow" />
+
+        </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
