--- a/app/src/main/res/layout/layout_item_product.xml
+++ b/app/src/main/res/layout/layout_item_product.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="4dp"
         android:gravity="center"
         android:textSize="14sp"
-        android:fontFamily="@font/inter_medium"
+        android:fontFamily="@font/inter_semibold"
         android:textColor="#343A40"
         android:text="Ordinary Burgers" />
 
