--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -12,7 +12,7 @@
         android:id="@+id/menu_cart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:icon="@drawable/cart"
+        android:icon="@drawable/noti"
         android:title="@string/cart" />
     <item
         android:id="@+id/menu_person"
