--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -91,8 +91,8 @@
 
         <FrameLayout
             android:id="@+id/frame_image1"
-            android:layout_width="73dp"
-            android:layout_height="73dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="16dp"
             android:clickable="true"
             android:focusable="true"
@@ -100,16 +100,16 @@
 
             <ImageView
                 android:id="@+id/image1"
-                android:layout_width="45dp"
-                android:layout_height="49dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:src="@drawable/sonyheadphones" />
         </FrameLayout>
 
         <FrameLayout
             android:id="@+id/frame_image2"
-            android:layout_width="73dp"
-            android:layout_height="73dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="16dp"
             android:clickable="true"
             android:focusable="true"
@@ -117,24 +117,24 @@
 
             <ImageView
                 android:id="@+id/image2"
-                android:layout_width="45dp"
-                android:layout_height="49dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:src="@drawable/sonyheadphones" />
         </FrameLayout>
 
         <FrameLayout
             android:id="@+id/frame_image3"
-            android:layout_width="73dp"
-            android:layout_height="73dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:clickable="true"
             android:focusable="true"
             android:background="@drawable/background_image_product_details">
 
             <ImageView
                 android:id="@+id/image3"
-                android:layout_width="45dp"
-                android:layout_height="49dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:src="@drawable/sonyheadphones" />
         </FrameLayout>
