--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -120,7 +120,7 @@
                 android:text="Thông tin cá nhân" />
 
             <ImageView
-                android:id="@+id/imageView9"
+                android:id="@+id/imgEditProfile"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_alignParentEnd="true"
@@ -148,7 +148,7 @@
                 android:text="Xem thông tin đơn hàng" />
 
             <ImageView
-                android:id="@+id/imageView11"
+                android:id="@+id/imgShowOrder"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_below="@id/imageView8"
@@ -181,7 +181,7 @@
                 android:id="@+id/imageView13"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_below="@id/imageView11"
+                android:layout_below="@id/imgShowOrder"
                 android:layout_marginTop="20dp"
                 android:layout_alignParentEnd="true"
 
